Implement adaptive basal governance parameters in DoubleKey and enhance UI preferences
- Added new governance parameters for adaptive basal management in DoubleKey, including hypo rate thresholds, BG thresholds, and scaling factors.
- Updated strings.xml with descriptive titles and summaries for the new governance parameters to improve user understanding.
- Enhanced OpenAPSAIMIPlugin to include the new governance preferences in the UI, ensuring users can easily access and modify these settings.
- Refactored learning and decision-making logic in BasalNeuralLearner to incorporate new governance metrics, improving the responsiveness of the adaptive basal system.